[tool.poetry]
name = "python-web-2"
version = "0.1.0"
description = ""
authors = ["RuslanStoliar <Dozent10123@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_2"}]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.6.0"
tabulate = "0.9.0"
flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
